# rs-majula

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE.md  README.md  docker-compose.yml
rl-env/: Cargo.toml
rl-env/scenarios/: mirror_melee.ron
rl-env/src/: action.rs  batch.rs  lib.rs  observe.rs  reward.rs  scenario.rs
rl-env/tests/: action_eat_equip.rs  action_move_attack.rs  action_prayer_spec.rs  batch_construct.rs  batch_obs.rs  batch_step.rs  boot.rs  combat.rs  determinism.rs  episode.rs  gate_determinism.rs  hit_events.rs  mask.rs  obs_derived.rs  obs_opponent.rs  obs_timers.rs  observation.rs  reward.rs  reward_fresh.rs  reward_pair.rs  scenario_apply.rs  scenario_load.rs  spawn.rs  spawn_and_equip.rs  step_loop.rs
rs-engine/: Cargo.toml  README.md
rs-engine/docs/: part-01-foundations-and-motivation.md  part-02-architecture-and-the-tick.md  part-03-spatial-world-and-entities.md  part-04-the-runescript-engine.md  part-05-player-state-and-items.md  part-06-networking-and-the-wire.md  part-07-content-persistence-and-distribution.md  part-08-runtime-and-host.md  part-09-engineering-deep-dives.md  part-10-reference.md  whitepaper-full.md
rs-engine/rs-cam/: Cargo.toml
rs-engine/rs-cam/src/: lib.rs
rs-engine/rs-datastruct/: Cargo.toml
rs-engine/rs-datastruct/src/: hashtable.rs  lib.rs  linklist.rs
rs-engine/rs-entity/: Cargo.toml
rs-engine/rs-entity/src/: build.rs  direction.rs  interaction.rs  lib.rs  lifetime.rs  loc.rs  npc.rs  obj.rs  pathing.rs  player.rs  state.rs
rs-engine/rs-grid/: Cargo.toml
rs-engine/rs-grid/src/: coord.rs  lib.rs  mapsquare_coord.rs  zone_coord.rs
rs-engine/rs-hero/: Cargo.toml
rs-engine/rs-hero/src/: lib.rs
rs-engine/rs-info/: Cargo.toml
rs-engine/rs-info/src/: lib.rs  renderer.rs
rs-engine/rs-inv/: Cargo.toml
rs-engine/rs-inv/src/: lib.rs
rs-engine/rs-queue/: Cargo.toml
rs-engine/rs-queue/src/: lib.rs
rs-engine/rs-stat/: Cargo.toml  build.rs
rs-engine/rs-stat/src/: lib.rs
rs-engine/rs-timer/: Cargo.toml
rs-engine/rs-timer/src/: lib.rs
rs-engine/rs-util/: Cargo.toml
rs-engine/rs-util/src/: base37.rs  bits.rs  colour.rs  lib.rs  random.rs  wordpack.rs
rs-engine/rs-var/: Cargo.toml
rs-engine/rs-var/src/: lib.rs
rs-engine/rs-vm/: Cargo.toml
rs-engine/rs-vm/src/: engine.rs  iterators.rs  lib.rs  macros.rs  npc_uid.rs  player_uid.rs  pointer.rs  register.rs  state.rs  subject.rs  trigger.rs  util.rs  vm.rs
rs-engine/rs-vm/src/ops/: core.rs  db.rs  debug.rs  enum.rs  inv.rs  lc.rs  loc.rs  mod.rs  nc.rs  npc.rs  number.rs  obj.rs  oc.rs  player.rs  server.rs  string.rs  struct.rs
rs-engine/rs-zone/: Cargo.toml
rs-engine/rs-zone/src/: lib.rs  zone.rs  zone_event.rs  zone_event_type.rs  zone_map.rs  zone_message.rs
rs-engine/src/: active_npc.rs  active_player.rs  build.rs  engine.rs  game_map.rs  info.rs  lib.rs  player_save.rs
rs-engine/src/clients/: client_db.rs  client_ether.rs  client_game.rs  mod.rs
rs-engine/src/handlers/: anticheat.rs  chat_setmode.rs  client_cheat.rs  close_modal.rs  event.rs  event_camera_position.rs  event_tracking.rs  friendlist_add.rs  friendlist_del.rs  idk_savedesign.rs  idle_timer.rs  if_button.rs  ignorelist_add.rs  ignorelist_del.rs  inv_button.rs  inv_buttond.rs  map_build_complete.rs  message_private.rs  message_public.rs  mod.rs  move_click.rs  no_timeout.rs  opheld.rs  opheldt.rs  opheldu.rs  oploc.rs  oploct.rs  oplocu.rs  opnpc.rs  opnpct.rs  opnpcu.rs  opobj.rs  opobjt.rs  opobju.rs  opplayer.rs  opplayert.rs  opplayeru.rs  rebuild_get_maps.rs  resume_p_countdialog.rs  resume_pause_button.rs  (+2 more)
rs-engine/src/phases/: autosave.rs  cleanup.rs  ether.rs  info.rs  input.rs  login.rs  logout.rs  mod.rs  npc.rs  output.rs  player.rs  saves.rs  shared.rs  world.rs  zone.rs
rs-pack/: Cargo.toml  README.md
rs-pack/src/: lib.rs  main.rs  pyxel.rs  sheet.rs  tga.rs  types.rs
rs-pack/src/cache/: category.rs  dbrow.rs  dbtable.rs  enum.rs  flo.rs  font.rs  hunt.rs  idk.rs  if.rs  inv.rs  loc.rs  mesanim.rs  midi.rs  mod.rs  npc.rs  obj.rs  param.rs  provider.rs  script.rs  seq.rs  seq_frame.rs  spotanim.rs  struct.rs  varbit.rs  varn.rs  varp.rs  vars.rs  wordenc.rs
rs-pack/src/pack/: mod.rs  ondemand.rs  pack.rs  pack_registry.rs  packed_data.rs  versionlist.rs
rs-pack/src/pack/config/: category.rs  dbrow.rs  dbtable.rs  enum.rs  flo.rs  hunt.rs  idk.rs  inv.rs  loc.rs  mes.rs  mesanim.rs  mod.rs  npc.rs  obj.rs  param.rs  seq.rs  spotanim.rs  struct.rs  varbit.rs  varn.rs  varp.rs  vars.rs
rs-pack/src/pack/interface/: mod.rs
rs-pack/src/pack/media/: mod.rs
rs-pack/src/pack/model/: mod.rs
rs-pack/src/pack/other/: jingle.rs  map.rs  mod.rs  song.rs
rs-pack/src/pack/sound/: mod.rs
rs-pack/src/pack/texture/: mod.rs
rs-pack/src/pack/title/: mod.rs
rs-pack/src/pack/util/: colour.rs  media.rs  mod.rs
rs-pack/src/pack/wordenc/: mod.rs
rs-pack/src/unpack/: config.rs  configdiff.rs  interface.rs  map.rs  media.rs  mod.rs  model.rs  namecrack.rs  report.rs  song.rs  sound.rs  texture.rs  title.rs  verify.rs  wordenc.rs
rs-pack/src/version_list/: mod.rs
rs-pack/src/versionlist/: mod.rs
rs-protocol/: Cargo.toml  build.rs
rs-protocol/macros/: Cargo.toml
rs-protocol/macros/src/: lib.rs
rs-protocol/src/: lib.rs  login.rs
rs-protocol/src/network/game/: client_prot.rs  client_prot_category.rs  client_prot_message.rs  info_prot.rs  info_prot_message.rs  mod.rs  server_prot.rs  server_prot_message.rs  server_prot_priority.rs
rs-protocol/src/network/game/client/: anticheat_cyclelogic1.rs  anticheat_cyclelogic2.rs  anticheat_cyclelogic3.rs  anticheat_cyclelogic4.rs  anticheat_cyclelogic5.rs  anticheat_cyclelogic6.rs  anticheat_cyclelogic7.rs  anticheat_oplogic1.rs  anticheat_oplogic2.rs  anticheat_oplogic3.rs  anticheat_oplogic4.rs  anticheat_oplogic5.rs  anticheat_oplogic6.rs  anticheat_oplogic7.rs  anticheat_oplogic8.rs  anticheat_oplogic9.rs  chat_setmode.rs  client_cheat.rs  (+67 more)
rs-server/: Cargo.toml  sailfish.toml
rs-server/src/: http.rs  jaggrab.rs  main.rs  socket.rs
rs-server/src/tui/: log_layer.rs  mod.rs
(+11127 files in other folders)
