[package]
name = "rs-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rs-io = { workspace = true }
rs-protocol-macros = { workspace = true }

[build-dependencies]
rev-cfg = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
