[package]
name = "rs-cam"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rs-datastruct = { workspace = true }
rs-vm = { workspace = true }

[build-dependencies]
rev-cfg = { workspace = true }

[lints]
workspace = true
