[package]
name = "rs-info"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rs-io = { workspace = true }
rs-protocol = { workspace = true }

[build-dependencies]
rev-cfg = { workspace = true }

[lints]
workspace = true
