[package]
name = "rs-zone"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rs-entity = { workspace = true }
rs-grid = { workspace = true }
rs-io = { workspace = true }
rs-pack = { workspace = true }
rs-protocol = { workspace = true }
rustc-hash = { workspace = true }

[build-dependencies]
rev-cfg = { workspace = true }

[lints]
workspace = true
